DSND-2876: Update structured logging